# emailauto

./: mailsend.py  periodmail.py  pyproject.toml
