[tool.poetry]
name = "emailauto"
version = "0.1"
description = "Email automation"
authors = ["motiongorilla <nize.afonya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
yagmail = "^0.15.293"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
